--- a/styles.css
+++ b/styles.css
@@ -250,12 +250,29 @@ footer {
     background-color: #b2952b;
 }
 /* Logo styles */
+.logo-centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .logo-centered img {
     display: block;
-    margin: 0 auto;
     border-radius: 50%;
     width: 100px; /* Adjust the size as needed */
     height: 100px; /* Adjust the size as needed */
     object-fit: cover;
+    animation: rotate 10s linear infinite; /* Apply the rotation animation */
 }
+
+/* Keyframes for rotating animation */
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
 
